--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -17,7 +17,7 @@
                     <a class="nav-item nav-link active" data-toggle="tab" role="tab" aria-selected="true" id="nav-module-tab" href="#module-tab">Module</a>
                     <a class="nav-item nav-link" data-toggle="tab" role="tab" aria-selected="false" id="nav-sitegroups-tab" href="#sitegroups-tab">{{module.forms.sitegroup.label_plural}}<span class="badge badge-pill badge-primary ml-2">{{ sitegroups.length }}</span></a>
                     <a class="nav-item nav-link" data-toggle="tab" role="tab" aria-selected="false" id="nav-sites-tab" href="#sites-tab">{{module.forms.site.label_plural}}<span class="badge badge-pill badge-primary ml-2">{{ sites.length }}</span></a>
-                    <a class="nav-item nav-link" data-toggle="tab" role="tab" aria-selected="false" id="nav-individuals-tab" href="#individuals-tab">Individus<span class="badge badge-pill badge-primary ml-2">{{ individuals.length }}</span></a>
+                    <a class="nav-item nav-link" data-toggle="tab" role="tab" aria-selected="false" id="nav-individuals-tab" href="#individuals-tab">{{module.forms.individual.label_plural}}<span class="badge badge-pill badge-primary ml-2">{{ individuals.length }}</span></a>
                     <a class="nav-item nav-link" data-toggle="tab" role="tab" aria-selected="false" id="nav-stats-tab" href="#stats-tab">Statistiques</a>
                 </div>
                 <div class="tab-content" id="nav-tabContent">
@@ -121,7 +121,7 @@
                         role="tabpanel"
                         attr.aria-labelledby="nav-individuals-tab">
                         <div class="toolbar clearfix"><!-- TODO add cruved -->
-                            <button class="btn btn-success float-left" [routerLink]="['individual']"><i class="fa fa-plus-circle"></i>&nbsp;Ajouter individu</button>
+                            <button class="btn btn-success float-left" [routerLink]="['individual']"><i class="fa fa-plus-circle"></i>&nbsp;Ajouter {{module.forms.individual.label}}</button>
                             <button disabled class="btn btn-primary float-right ml-2"><i class="fa fa-arrow-down"></i>&nbsp;Export CSV</button>
                             <button disabled class="btn btn-primary float-right"><i class="fa fa-filter"></i>&nbsp;Filtrer</button>
                         </div>
@@ -138,10 +138,10 @@
                             <ngx-datatable-column width="60">
                                 <ng-template let-row="row" ngx-datatable-cell-template>
                                     <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['individual', row.id_individual]">
-                                        <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Informations Individu ' + row.identifier"></i>
+                                        <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Informations ' + module.forms.individual.label + ' ' + row.identifier"></i>
                                     </a>
                                     <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['individual', {edit: row.id_individual}]">
-                                        <i class="fa fa-pencil-square-o" aria-hidden="true" [matTooltip]="'Editer Individu' + row.identifier"></i>
+                                        <i class="fa fa-pencil-square-o" aria-hidden="true" [matTooltip]="'Editer ' + module.forms.individual.label + ' ' + row.identifier"></i>
                                     </a>
                                 </ng-template>
                             </ngx-datatable-column>
