--- a/frontend/app/components/sites/form/site-form.component.html
+++ b/frontend/app/components/sites/form/site-form.component.html
@@ -36,7 +36,7 @@
               <div class="clearfix">
                 <button class="btn btn-primary float-left" [routerLink]="['..']" *ngIf="!bEdit">Annuler</button>
                 <button class="btn btn-primary float-left" [routerLink]="['..', 'site', site.id_site]" *ngIf="bEdit">Annuler</button>
-                <button *ngIf="!bChainInput  && !bEdit" class="btn btn-success float-right" [disabled]="!siteForm.valid" (click)="onSubmit(true)"><i class="fa fa-check"></i>&nbsp;Valider et ajouter une visite</button>
+                <button *ngIf="!bChainInput  && !bEdit" class="btn btn-success float-right" [disabled]="!siteForm.valid" (click)="onSubmit(true)"><i class="fa fa-check"></i>&nbsp;Valider et ajouter {{module.forms.visit.label}}</button>
                 <button *ngIf="!bChainInput" class="btn btn-success float-right mr-2" [disabled]="!siteForm.valid" (click)="onSubmit(false)"><i class="fa fa-check"></i>&nbsp;Valider</button>
                 <button *ngIf="bChainInput" class="btn btn-success float-right" [disabled]="!siteForm.valid" (click)="onSubmit(false)"><i class="fa fa-check"></i>&nbsp;Valider et enchainer les saisies</button>
               </div>
