--- a/frontend/app/components/visits/details/visit-details.component.html
+++ b/frontend/app/components/visits/details/visit-details.component.html
@@ -2,9 +2,9 @@
     <div class="flex-container">
         <div class="cadre" [style.min-height]="cardContentHeight + 'px'">
             <div id="details">
-                <gn-cmr-breadcrumb [path]="path" [currentPage]="'Visite'"></gn-cmr-breadcrumb>
+                <gn-cmr-breadcrumb [path]="path" [currentPage]="module.forms.visit.label"></gn-cmr-breadcrumb>
                 <div class="toolbar clearfix">
-                    <h3 class="float-left">Visite</h3>
+                    <h3 class="float-left">{{module.forms.visit.label}}</h3>
                     <button class="btn btn-primary float-right" [routerLink]="['..', {edit: visit.id_visit}]"><i class="fa fa-pencil"></i>&nbsp;Editer</button>
                 </div>
                 <div class="">
@@ -23,7 +23,7 @@
         </div>
         <div class="cadre scroll">
             <div class="" *ngIf="visit.observation">
-                <h3>Observations</h3>
+                <h3>{{module.forms.observation.label_plural}}</h3>
                 <div class="toolbar clearfix">
                     <button class="btn btn-success float-left" (click)="onClickAddObservation()"><i class="fa fa-plus-circle"></i>&nbsp;Ajout Observation</button>
                     <button disabled class="btn btn-primary float-right"><i class="fa fa-filter"></i>&nbsp;Filtrer</button>
@@ -41,10 +41,10 @@
                     <ngx-datatable-column width="60">
                         <ng-template let-row="row" ngx-datatable-cell-template>
                             <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['observation', row.id_observation]">
-                                <i class="fa fa-info-circle" aria-hidden="true" matTooltip="Détails de l'Observation"></i>
+                                <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Détails ' + module.forms.observation.label"></i>
                             </a>
                             <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['individual', row.id_individual, 'observation', {edit: row.id_observation}]">
-                                <i class="fa fa-pencil-square-o" aria-hidden="true" matTooltip="Editer l'Observation"></i>
+                                <i class="fa fa-pencil-square-o" aria-hidden="true" [matTooltip]="'Editer ' + module.forms.observation.label"></i>
                             </a>
                         </ng-template>
                     </ngx-datatable-column>
