--- a/frontend/app/components/visits/form/visit-form.component.html
+++ b/frontend/app/components/visits/form/visit-form.component.html
@@ -5,10 +5,10 @@
             </pnx-map>
         </div>
         <div class="cadre scroll">
-            <gn-cmr-breadcrumb [path]="path" [currentPage]="bEdit ? 'Edition Visite' : 'Création Visite'"></gn-cmr-breadcrumb>
+            <gn-cmr-breadcrumb [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ') + module.forms.visit.label"></gn-cmr-breadcrumb>
             <h3>Module: {{ module.module_label }}</h3>
             <div class="clearfix">
-              <h4 class="float-left">{{ bEdit ? 'Edition Visite' : 'Création Visite' }}</h4>
+              <h4 class="float-left">{{ (bEdit ? 'Edition ' : 'Création ') + module.forms.visit.label}}</h4>
               <span class="float-right" *ngIf="!bEdit">
                 <i class="fa fa-repeat fa-lg"></i>
                 <mat-slide-toggle id="repeat" color="primary" [(ngModel)]="bChainInput"></mat-slide-toggle>
