--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -48,7 +48,7 @@
                     <div class="tab-pane fade active show" id="visit-tab" role="tabpanel" attr.aria-labelledby="nav-visit-tab">
                         <div class="toolbar clearfix"><!-- TODO add cruved-->
                             <button class="btn btn-success float-left" [routerLink]="['visit']"><i class="fa fa-plus-circle"></i>&nbsp;Ajouter {{module.forms.visit.label}}</button>
-                            <button disabled class="btn btn-primary float-right"><i class="fa fa-filter"></i>&nbsp;Filtrer</button>
+                            <button disabled class="btn btn-primary float-right"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
                         </div>
                         <ngx-datatable #table
                             class="material striped margin-top-xs"
@@ -80,7 +80,7 @@
                     </div>
                     <div class="tab-pane fade" id="individuals-tab" role="tabpanel" attr.aria-labelledby="nav-individuals-tab">
                         <div class="toolbar clearfix">
-                            <button disabled class="btn btn-primary float-right"><i class="fa fa-filter"></i>&nbsp;Filtrer</button>
+                            <button disabled class="btn btn-primary float-right"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
                         </div>
                         <ngx-datatable #table
                             class="material striped margin-top-xs"
