--- a/frontend/app/components/visits/details/visit-details.component.html
+++ b/frontend/app/components/visits/details/visit-details.component.html
@@ -26,7 +26,7 @@
                 <h3>{{module.forms.observation.label_plural}}</h3>
                 <div class="toolbar clearfix">
                     <button class="btn btn-success float-left" (click)="onClickAddObservation()"><i class="fa fa-plus-circle"></i>&nbsp;Ajout Observation</button>
-                    <button disabled class="btn btn-primary float-right"><i class="fa fa-filter"></i>&nbsp;Filtrer</button>
+                    <button disabled class="btn btn-primary float-right"><i class="fa fa-sliders"></i>&nbsp;Filtrer</button>
                 </div>
                 <ngx-datatable #table
                     class="material striped margin-top-xs"
