--- a/frontend/app/components/observation/details/observation-details.component.html
+++ b/frontend/app/components/observation/details/observation-details.component.html
@@ -38,11 +38,11 @@
                     </tr>
                 </table>
 
-                <div class="card mt-3" *ngFor="let grp of formGroups" >
-                    <div class="card-header">
+                <div class="card mt-3 border-primary" *ngFor="let grp of formGroups" >
+                    <div class="card-header bg-primary">
                         <a data-toggle="collapse" [href]="'#collapse-body-' + grp['id']" role="button" [attr.aria-expanded]="grp.defaults.opened === true" [attr.aria-controls]="'collapse-body-' + grp['id']">
-                            <h5 class="float-left card-title">{{grp.label}}</h5>
-                            <span class="float-right">
+                            <h5 class="float-left card-title text-white">{{grp.label}}</h5>
+                            <span class="float-right text-white">
                                 <i class="fa fa-chevron-down"></i>
                                 <i class="fa fa-chevron-up"></i>
                             </span>
