--- a/frontend/app/components/observation/form/observation-form.component.html
+++ b/frontend/app/components/observation/form/observation-form.component.html
@@ -40,11 +40,11 @@
                     [formsDefinition]="observationFormDefinitions"
                 ></pnx-dynamic-form-generator>
 
-                <div class="card mt-3" *ngFor="let grp of formGroups" >
-                    <div class="card-header">
+                <div class="card mt-3 border-primary" *ngFor="let grp of formGroups" >
+                    <div class="card-header bg-primary text-white">
                         <a data-toggle="collapse" [href]="'#collapse-body-' + grp['id']" role="button" [attr.aria-expanded]="grp.defaults.opened === true" [attr.aria-controls]="'collapse-body-' + grp['id']">
-                            <h5 class="float-left card-title">{{grp.label}}</h5>
-                            <span class="float-right">
+                            <h5 class="float-left card-title text-white">{{grp.label}}</h5>
+                            <span class="float-right text-white">
                                 <i class="fa fa-chevron-down"></i>
                                 <i class="fa fa-chevron-up"></i>
                             </span>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
 
-              <div class="clearfix">
+              <div class="clearfix mt-3">
                 <button class="btn btn-primary float-left" [routerLink]="['../../..']" *ngIf="!bEdit">Annuler</button>
                 <button class="btn btn-primary float-left" [routerLink]="['../../..', 'observation', observation.id_observation]" *ngIf="bEdit">Annuler</button>
                 <button *ngIf="!bChainInput" class="btn btn-success float-right" [disabled]="!allForm.valid" (click)="onSubmit()"><i class="fa fa-check"></i>&nbsp;Valider</button>
