--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -97,7 +97,7 @@
                                     <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="[(site.id_sitegroup? '../../../..' : '../..'),'individual', row.id_individual]">
                                         <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Informations ' + module.forms.individual.label + ' ' + row.identifier"></i>
                                     </a>
-                                    <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['../..', 'individual', {edit: row.id_individual}]">
+                                    <a class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="[(site.id_sitegroup? '../../../..' : '../..'), 'individual', {edit: row.id_individual}]">
                                         <i class="fa fa-pencil-square-o" aria-hidden="true" matTooltip="'Editer ' + module.forms.individual.label + ' ' + row.identifier"></i>
                                     </a>
                                 </ng-template>
