--- a/frontend/app/components/observation/details/observation-details.component.html
+++ b/frontend/app/components/observation/details/observation-details.component.html
@@ -28,7 +28,7 @@
             <pnx-map height="40vh" class="map-card">
             </pnx-map>
         </div>
-        <div class="cadre scroll">
+        <div id="details-left" class="cadre scroll" [style.max-height]="cardContentHeight + 'px'">
             <div class="">
                 <h3>Détails</h3>
                 <table class="table table-striped table-sm scrollable">
