--- a/frontend/app/components/observation/details/observation-details.component.scss
+++ b/frontend/app/components/observation/details/observation-details.component.scss
@@ -2,9 +2,17 @@
     height: calc(100% - 40vh);
 }
 
+#details-left {
+    overflow-y: auto;
+}
+
 :host ::ng-deep .card-header {
     padding: 6px 12px;
     
+    h5 {
+        font-weight: normal;
+    }
+
     [aria-expanded=false] .fa-chevron-up,
     [aria-expanded=true] .fa-chevron-down {
         display: none;
